vpc.tf
resource "aws_vpc" "eks-vpc" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "Eks-vpc"
  }
}

resource "aws_internet_gateway" "internet_gateway" {
  vpc_id    = aws_vpc.eks-vpc.id

  tags      = {
    Name    = "Eks-igw"
  }
}

resource "aws_subnet" "public_subnet_az1" {
  vpc_id     = aws_vpc.eks-vpc.id
  cidr_block = var.public_subnet_az1_cidr
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public_subnet_az1"
  }
}

resource "aws_subnet" "public_subnet_az2" {
  vpc_id     = aws_vpc.eks-vpc.id
  cidr_block = var.public_subnet_az2_cidr
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "public_subnet_az2"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id       = aws_vpc.eks-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }

  tags       = {
    Name     = "public-route-table"
  }
}

# associate public subnet az1 to "public route table"
resource "aws_route_table_association" "public_subnet_az1_route_table_association" {
  subnet_id           = aws_subnet.public_subnet_az1.id
  route_table_id      = aws_route_table.public_route_table.id
}

# associate public subnet az2 to "public route table"
resource "aws_route_table_association" "public_subnet_az2_route_table_association" {
  subnet_id           = aws_subnet.public_subnet_az2.id
  route_table_id      = aws_route_table.public_route_table.id
}

resource "aws_subnet" "private_subnet_az1" {
  vpc_id     = aws_vpc.eks-vpc.id
  cidr_block = var.private_subnet_az1_cidr
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = false

  tags = {
    Name = "private_app_subnet_az1"
  }
}

resource "aws_subnet" "private_subnet_az2" {
  vpc_id     = aws_vpc.eks-vpc.id
  cidr_block = var.private_subnet_az2_cidr
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = false

  tags = {
    Name = "private_app_subnet_az2"
  }
}
